kubernetes/apps/default/scrypted/app/service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: scrypted-network-application
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.40.200
    ports:
      - port: 443
